frontend/test/should_pass/deque_006.grg
using deque_model_001;

rule addToDeque {
	a:A; b:A;

	if {
		a.niceDeque.subdeque(a.niceDeque.indexOf("foo"), 1).size()>=1 ;
		a.spiceDeque.subdeque(0, a.spiceDeque.size()).size()>=1;
	}		
	
	modify {
		eval {
			a.niceDeque = a.niceDeque.subdeque(a.niceDeque.indexOf("foo"), 1);
			a.spiceDeque = a.spiceDeque.subdeque(0, a.spiceDeque.size());
		}		
	}
}
